# TodayQuakes

./: .gitattributes  .gitignore  .pre-commit-config.yaml  DailyQuakes.py  LICENCE  Makefile  README.md  TodaysEarthquakes.ipynb  bot.py  config_logging.py  plot.ipynb  pyproject.toml  requirements.txt
.github/workflows/: bot.yml
data/: 2024-10-1.csv  2024-10-10.csv  2024-10-11.csv  2024-10-12.csv  2024-10-13.csv  2024-10-14.csv  2024-10-15.csv  2024-10-16.csv  2024-10-17.csv  2024-10-18.csv  2024-10-19.csv  2024-10-2.csv  2024-10-20.csv  2024-10-21.csv  2024-10-22.csv  2024-10-23.csv  2024-10-24.csv  2024-10-25.csv  2024-10-26.csv  2024-10-27.csv  2024-10-28.csv  2024-10-29.csv  2024-10-3.csv  2024-10-30.csv  2024-10-31.csv  2024-10-4.csv  2024-10-5.csv  2024-10-6.csv  2024-10-7.csv  2024-10-8.csv  2024-10-9.csv  2024-11-1.csv  2024-11-10.csv  2024-11-11.csv  2024-11-12.csv  2024-11-13.csv  2024-11-14.csv  2024-11-15.csv  2024-11-16.csv  2024-11-17.csv  (+698 more)
src/: __init__.py  bot.py  config_logging.py  daily_quakes.py
